@@ -1,3 +1,7 @@
+2017-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* test/Makefile.am: Add some tests for tiff2bw.
+
 2017-11-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* tools/tiff2bw.c (main): Free memory allocated in the tiff2bw
